test: 验证lint-staged格式化功能

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "lint-staged": {
     "backend/**/*.ts": [
-      "cd backend && npx eslint --fix",
-      "cd backend && npx prettier --write"
+      "bash -c 'cd backend && npx eslint --fix \"$0\"'",
+      "bash -c 'cd backend && npx prettier --write \"$0\"'"
     ]
   }
 }
